Add introduction text and styling

--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
                     <a href="signup.html">Join Us</a>
                 </li>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>
+        <div id="introduction-text">
+            <h2>The Malmö Book Club</h2>
+            <h3>We are a community of booklovers living in Malmö, Sweden who get together every month to share our passion for reading.</h3>
+        </div>
     </section>
     <section>Who we are</section>
     <section>reads and meetups for the year 2023</section>
