Add Google Maps location and styling

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     </section>
     <section>Who we are</section>
     <section>reads and meetups for the year 2023</section>
+    <section>
+        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2254.090155131584!2d12.9941293!3d55.600444599999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4653a15435423321%3A0xd5e40999ac88751f!2sMalm%C3%B6%20City%20Library!5e0!3m2!1sen!2sse!4v1670855536632!5m2!1sen!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </section>
     <footer>social and map</footer>
     
     <!-- font awesome script -->
