--- a/index.html
+++ b/index.html
@@ -32,7 +32,39 @@
         </div>
     </section>
     <section>Who we are</section>
-    <section>reads and meetups for the year 2023</section>
+    <section> <!-- layout and styling inspired by the Love Running Walkthrough project -->
+        <div>
+            <h2>7th of January, 2023</h2>
+            <a href="https://www.adlibris.com/se/bok/the-myth-of-normal-9781785042720?gclid=CjwKCAiAv9ucBhBXEiwA6N8nYG1QZT3WN1yMogVKPxE_n1A0w1Ih1TB7oA-7nl5_0DR3DyZc2F1TwhoCGCQQAvD_BwE">
+                <img src="https://s2.adlibris.com/images/63089045/the-myth-of-normal.jpg" alt="Gábor Máté: The Myth of Normal">
+            </a>    
+       </div>
+       <div>
+            <h2>4th of February, 2023</h2>
+            <img src="">
+        </div>
+        <div>
+            <h2>Urban <i class="fa-solid fa-city"></i></h2>
+            <h3>Friday</h3>
+            <h3>5K</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>18:30</h3>
+        </div>
+        <div>
+            <h2>Trail <i class="fa-solid fa-tree"></i></h2>
+            <h3>Saturday</h3>
+            <h3>10K</h3>
+            <h3>The Phoenix Park</h3>
+            <h3>09:30</h3>
+        </div>
+        <div>
+            <h2>Coffee <i class="fa-solid fa-mug-hot"></i></h2>
+            <h3>Sunday</h3>
+            <h3>0K</h3>
+            <h3>The Marker Hotel</h3>
+            <h3>11:30</h3>
+        </div>
+    </section>
     <section>
         <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2254.090155131584!2d12.9941293!3d55.600444599999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4653a15435423321%3A0xd5e40999ac88751f!2sMalm%C3%B6%20City%20Library!5e0!3m2!1sen!2sse!4v1670855536632!5m2!1sen!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
