Add target to link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section> <!-- layout and styling inspired by the Love Running Walkthrough project -->
         <div>
             <h2>7th of January, 2023</h2>
-            <a href="https://www.adlibris.com/se/bok/the-myth-of-normal-9781785042720?gclid=CjwKCAiAv9ucBhBXEiwA6N8nYG1QZT3WN1yMogVKPxE_n1A0w1Ih1TB7oA-7nl5_0DR3DyZc2F1TwhoCGCQQAvD_BwE">
+            <a href="https://www.adlibris.com/se/bok/the-myth-of-normal-9781785042720?gclid=CjwKCAiAv9ucBhBXEiwA6N8nYG1QZT3WN1yMogVKPxE_n1A0w1Ih1TB7oA-7nl5_0DR3DyZc2F1TwhoCGCQQAvD_BwE" target="_blank">
                 <img src="https://s2.adlibris.com/images/63089045/the-myth-of-normal.jpg" alt="Gábor Máté: The Myth of Normal">
             </a>    
        </div>
