Add books to the list

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <h3>We are a community of booklovers living in Malmö, Sweden who get together every month to share our passion for reading.</h3>
         </div>
     </section>
-    <section>Who we are</section>
     <section> <!-- layout and styling inspired by the Love Running Walkthrough project -->
         <div>
             <h2>7th of January, 2023</h2>
@@ -41,28 +40,24 @@
        </div>
        <div>
             <h2>4th of February, 2023</h2>
-            <img src="">
+            <a href="https://www.adlibris.com/se/bok/the-midnight-library-9781786892737" target="_blank">
+                <img src="https://s1.adlibris.com/images/59118830/the-midnight-library.jpg" alt="Matt Haig: The Midnight Library">
+            </a>
         </div>
         <div>
-            <h2>Urban <i class="fa-solid fa-city"></i></h2>
-            <h3>Friday</h3>
-            <h3>5K</h3>
-            <h3>The Marker Hotel</h3>
-            <h3>18:30</h3>
+            <h2>4th of March, 2023</h2>
+            <a href="https://www.adlibris.com/se/bok/ishmael-an-adventure-of-the-mind-and-spirit-9780613080934" target="_blank">
+                <img src="https://s1.adlibris.com/images/6963755/ishmael-an-adventure-of-the-mind-and-spirit.jpg" alt="Daniel Quinn: Ishmael">
+            </a>
         </div>
         <div>
-            <h2>Trail <i class="fa-solid fa-tree"></i></h2>
-            <h3>Saturday</h3>
-            <h3>10K</h3>
-            <h3>The Phoenix Park</h3>
-            <h3>09:30</h3>
+            <h2>1st of April, 2023</h2>
+            <a href="https://www.adlibris.com/se/bok/the-story-of-b-9780553379013" target="_blank">
+                <img src="https://s2.adlibris.com/images/6630092/the-story-of-b.jpg" alt="Daniel Quinn: The Story of B">
+            </a>
         </div>
         <div>
-            <h2>Coffee <i class="fa-solid fa-mug-hot"></i></h2>
-            <h3>Sunday</h3>
-            <h3>0K</h3>
-            <h3>The Marker Hotel</h3>
-            <h3>11:30</h3>
+            <a href="calendar.html">Click here to see the whole list for 2023</a>    
         </div>
     </section>
     <section>
