Add introduction text containers and styling

--- a/index.html
+++ b/index.html
@@ -26,9 +26,29 @@
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>
-        <div id="introduction-text">
-            <h2>The Malmö Book Club</h2>
-            <h3>We are a community of booklovers living in Malmö, Sweden who get together every month to share our passion for reading.</h3>
+        <div id="left">
+            <div id="left-container">
+                <div id="introduction-text-left">
+                    <h2>some text</h2>
+                    <h3>some more text</h3>
+                </div>
+            </div>
+        </div>
+        <div id="right">
+            <div id="right-container">
+                <div id="introduction-text-right">
+                    <h2>some text</h2>
+                    <h3>some more text</h3>
+                </div>
+            </div>
+        </div>   
+        <div id="center">
+            <div id="center-container">
+                <div id="introduction-text-center">
+                    <h2>The Malmö Book Club</h2>
+                    <h3>We are a community of booklovers living in Malmö, Sweden who get together every month to share our passion for reading.</h3>
+                </div>
+            </div>
         </div>
     </section>
     <section> <!-- layout and styling inspired by the Love Running Walkthrough project -->
