Add text, styling and positioning to the introduction section

--- a/index.html
+++ b/index.html
@@ -28,25 +28,34 @@
         <div id="hero-image"></div>
         <div id="left">
             <div id="left-container">
-                <div id="introduction-text-left">
-                    <h2>some text</h2>
-                    <h3>some more text</h3>
+                <div class="introduction-text-left">
+                    <h2><strong>The Malmö Book Club</strong></h2>
+                    <hr>
+                    <h3>Us in <strong>#läsa</strong> (means "to read" in Swedish) form a growing community of booklovers living in Malmö, Sweden. We get together the first <strong>Saturday</strong> of each month to share our passion for reading.</h3>
+                    <hr>
+                    <h3>Check out our planned readings below and if you got interested, sign up! The book club is completely <strong>free of charge</strong>!</h3>
                 </div>
             </div>
         </div>
         <div id="right">
             <div id="right-container">
-                <div id="introduction-text-right">
-                    <h2>some text</h2>
-                    <h3>some more text</h3>
+                <div class="introduction-text-right">
+                    <h2>How do we operate?</h2>
+                    <hr>
+                    <h3><h3>The purchasing books themselves is the only thing you are responsible for, however, we teamed up with <a href="https://www.adlibris.com/se" target="_blank">Aldibris</a> to make the books even more accessible for our members! Once you sign up, you'll find your member code in the welcome email we'll send you which will give you 15% off from your purchases from <a href="https://www.adlibris.com/se">Aldibris</a>.</h3></h3>
                 </div>
             </div>
         </div>   
         <div id="center">
             <div id="center-container">
-                <div id="introduction-text-center">
-                    <h2>The Malmö Book Club</h2>
-                    <h3>We are a community of booklovers living in Malmö, Sweden who get together every month to share our passion for reading.</h3>
+                <div class="introduction-text-center">
+                    <h2>How do we operate?</h2>
+                    <hr>
+                    <ul>
+                        <li>Meetup the <strong>first Saturday of each month at 11:30 am</strong> at the <a href="https://goo.gl/maps/D8zuA3WG4Eheo3xn7" target="_blank">Malmö Stadsbibliotek</a>.<hr></li>
+                        <li>Our meetings are held in <strong>English</strong>.<hr></li>
+                        <li></li>
+                    </ul>
                 </div>
             </div>
         </div>
