--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
         </div>
     </section>
-    <section> <!-- layout and styling inspired by the Love Running Walkthrough project -->
+    <section id="book-list"> <!-- layout and styling inspired by the Love Running Walkthrough project -->
         <div>
             <h2>7th of January, 2023</h2>
             <a href="https://www.adlibris.com/se/bok/the-myth-of-normal-9781785042720?gclid=CjwKCAiAv9ucBhBXEiwA6N8nYG1QZT3WN1yMogVKPxE_n1A0w1Ih1TB7oA-7nl5_0DR3DyZc2F1TwhoCGCQQAvD_BwE" target="_blank">
