--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>#läsa - The Malmö Book Club</title>
 </head>
 <body>
-    <header>
+    <header id="main-outer">
+        <!--Logo and navigation menu-->
+        <div id="main-image">
         <a href="index.html">
             <h1 id="logo">#läsa</h1>
         </a>
@@ -19,79 +21,30 @@
                     <a href="signup.html">Join Us</a>
                 </li>
                 <li>
+                    <a href="calendar.html">Calendar</a>
+                </li>
+                <li>
                     <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
+        </div>  
     </header>
-    <section id="hero-outer">
-        <div id="hero-image"></div>
-        <div id="left">
-            <div id="left-container">
-                <div class="introduction-text-left">
-                    <h2><strong>The Malmö Book Club</strong></h2>
-                    <hr>
-                    <h3>Us in <strong>#läsa</strong> (means "to read" in Swedish) form a growing community of booklovers living in Malmö, Sweden. We get together the first <strong>Saturday</strong> of each month to share our passion for reading.</h3>
-                    <hr>
-                    <h3>Check out our planned readings below and if you got interested, sign up! The book club is completely <strong>free of charge</strong>!</h3>
-                </div>
-            </div>
-        </div>
-        <div id="right">
-            <div id="right-container">
-                <div class="introduction-text-right">
-                    <h2>How do we operate?</h2>
-                    <hr>
-                    <h3><h3>The purchasing books themselves is the only thing you are responsible for, however, we teamed up with <a href="https://www.adlibris.com/se" target="_blank">Aldibris</a> to make the books even more accessible for our members! Once you sign up, you'll find your member code in the welcome email we'll send you which will give you 15% off from your purchases from <a href="https://www.adlibris.com/se">Aldibris</a>.</h3></h3>
-                </div>
-            </div>
-        </div>   
-        <div id="center">
-            <div id="center-container">
-                <div class="introduction-text-center">
-                    <h2>How do we operate?</h2>
-                    <hr>
-                    <ul>
-                        <li>Meetup the <strong>first Saturday of each month at 11:30 am</strong> at the <a href="https://goo.gl/maps/D8zuA3WG4Eheo3xn7" target="_blank">Malmö Stadsbibliotek</a>.<hr></li>
-                        <li>Our meetings are held in <strong>English</strong>.<hr></li>
-                        <li></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    <section id="quote">
+        <div>
+            <h1> <i class="fa-solid fa-quote-right"></i></h1>
+            <p>
+            "Have you also learned that secret from the river; that there is no such thing as time?
+That the river is everywhere at the same time, at the source and at the mouth, at the waterfall, at the ferry, at the current, in the ocean and in the mountains, everywhere and that the present only exists for it, not the shadow of the past nor the shadow of the future."
+            </p>
+            <h3>Hermann Hesse | Siddhartha</h3>
     </section>
-    <section id="book-list"> <!-- layout and styling inspired by the Love Running Walkthrough project -->
-        <div>
-            <h2>7th of January, 2023</h2>
-            <a href="https://www.adlibris.com/se/bok/the-myth-of-normal-9781785042720?gclid=CjwKCAiAv9ucBhBXEiwA6N8nYG1QZT3WN1yMogVKPxE_n1A0w1Ih1TB7oA-7nl5_0DR3DyZc2F1TwhoCGCQQAvD_BwE" target="_blank">
-                <img src="https://s2.adlibris.com/images/63089045/the-myth-of-normal.jpg" alt="Gábor Máté: The Myth of Normal">
-            </a>    
-       </div>
-       <div>
-            <h2>4th of February, 2023</h2>
-            <a href="https://www.adlibris.com/se/bok/the-midnight-library-9781786892737" target="_blank">
-                <img src="https://s1.adlibris.com/images/59118830/the-midnight-library.jpg" alt="Matt Haig: The Midnight Library">
-            </a>
-        </div>
-        <div>
-            <h2>4th of March, 2023</h2>
-            <a href="https://www.adlibris.com/se/bok/ishmael-an-adventure-of-the-mind-and-spirit-9780613080934" target="_blank">
-                <img src="https://s1.adlibris.com/images/6963755/ishmael-an-adventure-of-the-mind-and-spirit.jpg" alt="Daniel Quinn: Ishmael">
-            </a>
-        </div>
-        <div>
-            <h2>1st of April, 2023</h2>
-            <a href="https://www.adlibris.com/se/bok/the-story-of-b-9780553379013" target="_blank">
-                <img src="https://s2.adlibris.com/images/6630092/the-story-of-b.jpg" alt="Daniel Quinn: The Story of B">
-            </a>
-        </div>
-        <div>
-            <a href="calendar.html">Click here to see the whole list for 2023</a>    
-        </div>
-    </section>
-    <section>
-        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2254.090155131584!2d12.9941293!3d55.600444599999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4653a15435423321%3A0xd5e40999ac88751f!2sMalm%C3%B6%20City%20Library!5e0!3m2!1sen!2sse!4v1670855536632!5m2!1sen!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </section>
+    </div>
+        
+
+
+   </section>
+   
     <footer>social and map</footer>
     
     <!-- font awesome script -->
