Further modification of the quote section and height of main image

--- a/calendar.html
+++ b/calendar.html
@@ -9,7 +9,9 @@
     <title>#läsa - The Malmö Book Club</title>
 </head>
 <body>
-    <header>
+    <header id="main-outer">
+        <!--Logo and navigation menu-->
+        <div id="main-image">
         <a href="index.html">
             <h1 id="logo">#läsa</h1>
         </a>
@@ -26,6 +28,7 @@
                 </li>
             </ul>
         </nav>
+        </div>  
     </header>
 
     <section>
