Add content to table

--- a/index.html
+++ b/index.html
@@ -43,10 +43,6 @@ That the river is everywhere at the same time, at the source and at the mouth, a
     <section id="books">
             <table>
                 <tr>
-                    <th>Our next read</th>
-                    <th>Appetizer</th>
-                </tr>
-                <tr>
                     <td>
                         <a href="https://www.adlibris.com/se/bok/the-midnight-library-9781786892737" target="_blank">
                         <img src="https://s1.adlibris.com/images/59118830/the-midnight-library.jpg" alt="Matt Haig: The Midnight Library">
@@ -60,7 +56,7 @@ That the river is everywhere at the same time, at the source and at the mouth, a
                             <img src="https://s2.adlibris.com/images/63089045/the-myth-of-normal.jpg" alt="Gábor Máté: The Myth of Normal">
                         </a> 
                     </td>
-                    <td>"It all starts with waking up... to what our bodies are expressing and our minds are suppressing."</td>
+                    <td>"It all starts with waking up... to what our bodies are expressing and our minds are suppressing." | <strong>Meetup: March 4, 2023</strong></td>
                 </tr>
                 <tr>
                     <td>
@@ -70,7 +66,9 @@ That the river is everywhere at the same time, at the source and at the mouth, a
                     </td>
                     <td>"Does the earth belong to man?" Ishmael asks. "Or does man belong to the earth?"
                         <hr>
-                        <h3>Meetup: March 4, 2023</h3>
+                        <strong>Meetup: March 4, 2023</strong>
+                        <hr>
+                        <strong><i class="fa-solid fa-location-dot"></i> Malmö Stadsbibliotek</strong>
                 </tr>
             </table>  
     
