--- a/index.html
+++ b/index.html
@@ -82,7 +82,16 @@ That the river is everywhere at the same time, at the source and at the mouth, a
 
    </section>
    
-    <footer>social and map</footer>
+    <footer>
+        <ul class="social">
+            <li>
+                <a href="https://facebook.com" rel="noopener" target="_blank" aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" rel="noopener" target="_blank" aria-label="Visit our Instagram page (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
     
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/8e916f83b9.js" crossorigin="anonymous"></script>
