--- a/signup.html
+++ b/signup.html
@@ -31,7 +31,16 @@
         </div>  
     </header>
 
-    <footer>social and map</footer>
+    <footer>
+        <ul class="social">
+            <li>
+                <a href="https://facebook.com" rel="noopener" target="_blank" aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" rel="noopener" target="_blank" aria-label="Visit our Instagram page (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
     
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/8e916f83b9.js" crossorigin="anonymous"></script>
