Add more content to calendar page and almost final touch-ups

--- a/calendar.html
+++ b/calendar.html
@@ -30,6 +30,24 @@
         </nav>
         </div>  
     </header>
+    <section id="info">
+        <div class="meetup-info">
+            <h1>Meetup information:</h1>
+            <p>
+                <ul>
+                    <li>The first <strong>Saturday</strong> of each month (exact dates indicated below) at <strong>11:30 am</strong></li>
+                    <li><i class="fa-solid fa-map-pin"></i> <em><a href="https://goo.gl/maps/G8AqRQjxYaScxDje8" target="_blank">Malmö Stadsbibliotek</a></em></li>
+                </ul>
+            </p>
+        </div>
+        <div class="join-info">
+            <h1>How to join:</h1>
+            <ul>
+                <li>Go to our <em><a href="signup.html" target="_blank">Join Us </a></em>page and fill the sign up form </li>
+                <li>You'll get a welcome email with a link to our Slack group and our member discount code to <em><a href="" target="_blank">Aldibris</a></em> - not just for our reads, but all of the books they carry</li>
+            </ul>
+        </div>
+    </section>
     <section id="calendar-table-books">
         <div class="upcoming-reads">
             <h2>Full list of reads and meetups for 2023:</h2>
