Add Join Us page content and styling

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ That the river is everywhere at the same time, at the source and at the mouth, a
                 <a href="calendar.html">All Meetups</a>
             </div>                
     </section>
- <!--Footer section - influenced by the walkthrough project-->  
+ <!--Footer section - influenced by the walkthrough project - Social Links-->   
     <footer>
         <ul class="social">
             <li>
