--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header id="main-outer">
-        <!--Logo and navigation menu-->
+<!--Logo and navigation menu-->
         <div id="main-image">
         <a href="index.html">
             <h1 id="logo">#läsa</h1>
@@ -30,7 +30,24 @@
         </nav>
         </div>  
     </header>
-
+<!--The form section build-up is inspired by the Love Running Walkthrough Project-->
+    <section id="form-section">
+        <form method="POST" action="https://formdump.codeinstitute.net/" class="signup-form">
+            <h2>Be a part of our community!</h2>
+            <hr>
+            <label for="fname">First Name:</label>
+            <input class="text-input" id="fname" name="first_name" type="text" required>
+            <hr>
+            <label for="lname">Last Name:</label>
+            <input class="text-input" id="lname" name="last_name" type="text" required>
+            <hr>
+            <label for="email">Email Address:</label>
+            <input class="text-input" type="email" id="email" name="email_address" required>
+            <hr>
+            <input class="join-button" type="submit" value="Join">
+        </form>
+    </section>
+<!--Social Links--> 
     <footer>
         <ul class="social">
             <li>
@@ -40,8 +57,7 @@
                 <a href="https://instagram.com" rel="noopener" target="_blank" aria-label="Visit our Instagram page (opens in new tab)"><i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
-    </footer>
-    
-    <!-- font awesome script -->
+    </footer>   
+<!-- font awesome script -->
     <script src="https://kit.fontawesome.com/8e916f83b9.js" crossorigin="anonymous"></script>
 </body>
