--- a/calendar.html
+++ b/calendar.html
@@ -59,91 +59,132 @@
                 <td>
                     <a href="https://www.adlibris.com/se/bok/the-midnight-library-9781786892737" target="_blank">
                     <img src="https://s1.adlibris.com/images/59118830/the-midnight-library.jpg" alt="Matt Haig: The Midnight Library">
-                    </a>
+                    </a><hr> <strong>Meetup: January 7, 2023</strong>
                 </td>
-                <td>"Nora's life has been going from bad to worse. Then at the stroke of midnight on her last day on earth she finds herself transported to a library. There she is given the chance to undo her regrets and try out each of the other lives she might have lived. Which raises the ultimate question: with infinite choices, what is the best way to live?" <hr> | <strong>Meetup: January 7, 2023</strong></td>
+                <td class="to-hide">"Nora's life has been going from bad to worse. Then at the stroke of midnight on her last day on earth she finds herself transported to a library. There she is given the chance to undo her regrets and try out each of the other lives she might have lived. Which raises the ultimate question: with infinite choices, what is the best way to live?"</td>
                 <td>
                     <a href="https://www.adlibris.com/se/bok/the-myth-of-normal-9781785042720?gclid=CjwKCAiAv9ucBhBXEiwA6N8nYG1QZT3WN1yMogVKPxE_n1A0w1Ih1TB7oA-7nl5_0DR3DyZc2F1TwhoCGCQQAvD_BwE" target="_blank">
                         <img src="https://s2.adlibris.com/images/63089045/the-myth-of-normal.jpg" alt="Gábor Máté: The Myth of Normal">
-                    </a> 
+                    </a><hr> <strong>Meetup: February 4, 2023</strong>
                 </td>
-                <td>"It all starts with waking up... to what our bodies are expressing and our minds are suppressing." <hr> | <strong>Meetup: 
-                    February 4, 2023</strong></td>
+                <td class="to-hide">"It all starts with waking up... to what our bodies are expressing and our minds are suppressing."</td>
             </tr>
             <tr>
                 <td>
                     <a href="https://www.adlibris.com/se/bok/ishmael-an-adventure-of-the-mind-and-spirit-9780613080934" target="_blank">
                         <img src="https://s1.adlibris.com/images/6963755/ishmael-an-adventure-of-the-mind-and-spirit.jpg" alt="Daniel Quinn: Ishmael">
-                    </a>
+                    </a><hr> <strong>Meetup: March 4, 2023</strong>
                 </td>
-                <td>"Does the earth belong to man?" Ishmael asks. "Or does man belong to the earth?" <hr> | <strong>Meetup: March 4, 2023</strong>         
+                <td class="to-hide">"Does the earth belong to man?" Ishmael asks. "Or does man belong to the earth?"</td>        
                 <td>
                     <a href="https://www.adlibris.com/se/bok/the-story-of-b-9780553379013" target="_blank">
                         <img src="https://s2.adlibris.com/images/6630092/the-story-of-b.jpg" alt="Daniel Quinn: Story of B (2nd book of the Ishmael trilogy)">
-                    </a>
+                    </a><hr> <strong>Meetup: April 1, 2023</strong>
                 </td>
-                <td>"The target of Osborne's investigation is an American known only as B. He isn't teaching New Age platitudes or building a fanatical following; instead, he is quietly uncovering the hidden history of our planet, redefining the fall of man, and retracing a path of human spirituality that extends millions of years into the past. From the beginning, Fr. Osborne is stunned, outraged, and awed by the simplicity and profundity of B's teachings. Is B merely a heretic--or is he the Antichrist sent to seduce humanity not with wickedness, but with ideas more alluring than those of traditional religion?" <hr> | <strong>Meetup: April 1, 2023</strong>    
+                <td class="to-hide">"The target of Osborne's investigation is an American known only as B. He isn't teaching New Age platitudes or building a fanatical following; instead, he is quietly uncovering the hidden history of our planet, redefining the fall of man, and retracing a path of human spirituality that extends millions of years into the past. From the beginning, Fr. Osborne is stunned, outraged, and awed by the simplicity and profundity of B's teachings. Is B merely a heretic--or is he the Antichrist sent to seduce humanity not with wickedness, but with ideas more alluring than those of traditional religion?"    
                 </td>   
             </tr>
             <tr>
                 <td>
                     <a href="https://www.adlibris.com/se/bok/my-ishmael-9780553379655" target="_blank">
                         <img src="https://s2.adlibris.com/images/366002/my-ishmael.jpg" alt="Daniel Quinn: My Ishmael (The 3rd book of the Ishmael trilogy)">
-                    </a>
+                    </a><hr> <strong>Meetup: May 6, 2023</strong>
                 </td>
-                <td>"When Ishmael places an advertisement for pupils with "an earnest desire to save the world," he does not expect a child to answer him. But twelve-year-old Julie Gerchak is undaunted by Ishmael's reluctance to teach someone so young, and convinces him to take her on as his next student." <hr> | <strong>Meetup: May 6, 2023</strong></td>
+                <td class="to-hide">"When Ishmael places an advertisement for pupils with "an earnest desire to save the world," he does not expect a child to answer him. But twelve-year-old Julie Gerchak is undaunted by Ishmael's reluctance to teach someone so young, and convinces him to take her on as his next student."</td>
                 <td>
                     <a href="https://www.adlibris.com/se/bok/when-nietzsche-wept-9780062009302" target="_blank">
                         <img src="https://s1.adlibris.com/images/2271200/when-nietzsche-wept.jpg" alt="Irvin D. Yalom: When Nietzsche Wept">
-                    </a>
+                    </a><hr> <strong>Meetup: June 3, 2023</strong>
                 </td>
-                <td>"In nineteenth-century Vienna, a drama of love, fate, and will is played out amid the intellectual ferment that defined the era. Josef Breuer, one of the founding fathers of psychoanalysis, is at the height of his career. Friedrich Nietzsche, Europe's greatest philosopher, is on the brink of suicidal despair, unable to find a cure for the headaches and other ailments that plague him." <hr> | <strong>Meetup: June 3, 2023</strong></td>
+                <td class="to-hide">"In nineteenth-century Vienna, a drama of love, fate, and will is played out amid the intellectual ferment that defined the era. Josef Breuer, one of the founding fathers of psychoanalysis, is at the height of his career. Friedrich Nietzsche, Europe's greatest philosopher, is on the brink of suicidal despair, unable to find a cure for the headaches and other ailments that plague him." <hr> | <strong>Meetup: June 3, 2023</strong></td>
             </tr>
             <tr>
                 <td>
                     <a href="https://www.adlibris.com/se/bok/the-schopenhauer-cure-9780060938109" target="_blank">
                         <img src="https://s1.adlibris.com/images/2476682/the-schopenhauer-cure.jpg" alt="Irvin D. Yalom: The Schopenhauer Cure">
-                    </a>
+                    </a><hr> <strong>Meetup: July 1, 2023</strong>
                 </td>
-                <td>"Reevaluating his life after a brush with death, psychiatrist Julius Hertzfeld reconnects with former patient Philip and urges him to join Hertzfeld's therapy group, unaware that a woman Philip victimized is also a member." <hr> | <strong>Meetup: July 1, 2023</strong></td>
+                <td class="to-hide">"Reevaluating his life after a brush with death, psychiatrist Julius Hertzfeld reconnects with former patient Philip and urges him to join Hertzfeld's therapy group, unaware that a woman Philip victimized is also a member."</td>
                 <td>
                     <a href="https://www.adlibris.com/se/bok/the-spinoza-problem-9780465061853" target="_blank">
                         <img src="https://s2.adlibris.com/images/2988587/the-spinoza-problem.jpg" alt="Irvin D. Yalom: The Spinoza Problem">
-                    </a>
+                    </a><hr> <strong>Meetup: August 5, 2023</strong>
                 </td>
-                <td>"Seamlessly alternating between Golden Age Amsterdam and Nazi Germany, Yalom investigates the inner lives of these two enigmatic men in a tale of influence and anxiety, the origins of good and evil, and the philosophy of freedom and the tyranny of terror." <hr> | <strong>Meetup: August 5, 2023</strong></td>
+                <td class="to-hide">"Seamlessly alternating between Golden Age Amsterdam and Nazi Germany, Yalom investigates the inner lives of these two enigmatic men in a tale of influence and anxiety, the origins of good and evil, and the philosophy of freedom and the tyranny of terror."</td>
             </tr>
             <tr>
                 <td>
                     <a href="https://www.adlibris.com/se/bok/journey-by-moonlight-9781901285505" target="_blank">
                         <img src="https://s2.adlibris.com/images/5824213/journey-by-moonlight.jpg" alt="Antal Szerb: Journey by Moonlight">
-                    </a>
+                    </a><hr> <strong>Meetup: September 2, 2023</strong>
                 </td>
-                <td>" 'The trouble began in Venice ...' Mihály has dreamt of Italy all his life. When he finally travels there, on his honeymoon with Erzsi, he soon abandons his new wife in order to find himself, haunted by old friends from his turbulent teenage days: the beautiful, kind Tamás, the brash and wicked János, and the sexless yet unforgettable Éva." <hr> | <strong>Meetup: September 2, 2023</strong></td>
+                <td class="to-hide">" 'The trouble began in Venice ...' Mihály has dreamt of Italy all his life. When he finally travels there, on his honeymoon with Erzsi, he soon abandons his new wife in order to find himself, haunted by old friends from his turbulent teenage days: the beautiful, kind Tamás, the brash and wicked János, and the sexless yet unforgettable Éva."</td>
                 <td>
                     <a href="https://www.adlibris.com/se/bok/how-to-stop-time-9781838858476" target="_blank">
                         <img src="https://s2.adlibris.com/images/62888285/how-to-stop-time.jpg" alt="Matt Haig: How To Stop Time">
-                    </a>
+                    </a><hr> <strong>Meetup: October 7, 2023</strong>
                 </td>
-                <td>"Tom Hazard has a dangerous secret. He may look like an ordinary 41-year-old history teacher, but he's been alive for centuries. From Elizabethan England to Jazz-Age Paris, from New York to the South Seas, Tom has seen it all. As long as he keeps changing his identity, he can stay one step ahead of his past - and stay alive. The only thing he must not do is fall in love.
+                <td class="to-hide">"Tom Hazard has a dangerous secret. He may look like an ordinary 41-year-old history teacher, but he's been alive for centuries. From Elizabethan England to Jazz-Age Paris, from New York to the South Seas, Tom has seen it all. As long as he keeps changing his identity, he can stay one step ahead of his past - and stay alive. The only thing he must not do is fall in love.
 
-                    But what if the one thing he can't have just happens to be the one thing that might save him?" <hr> | <strong>Meetup: October 7, 2023</strong></td>
+                    But what if the one thing he can't have just happens to be the one thing that might save him?"</td>
             </tr>
             <tr>
                 <td>
                     <a href="https://www.adlibris.com/se/bok/narcissus-and-goldmund-9780141984612" target="_blank">
                         <img src="https://s1.adlibris.com/images/27885768/narcissus-and-goldmund.jpg" alt="Hermann Hesse: Narcissus and Goldmund">
-                    </a>
+                    </a><hr> <strong>Meetup: November 4, 2023</strong>
                 </td>
-                <td>"One of Hermann Hesse's greatest novels, Narcissus and Goldmund is an extraordinary recreation of the Middle Ages, contrasting the careers of two friends, one of whom shuns life in a monastery and goes on the road, tangled in the extremes of life in a world dominated by sin, plague and war, the other staying in the monastery and struggling, with equal difficulty, to lead a life of spiritual denial." <hr> | <strong>Meetup: November 4, 2023</strong></td>
+                <td class="to-hide">"One of Hermann Hesse's greatest novels, Narcissus and Goldmund is an extraordinary recreation of the Middle Ages, contrasting the careers of two friends, one of whom shuns life in a monastery and goes on the road, tangled in the extremes of life in a world dominated by sin, plague and war, the other staying in the monastery and struggling, with equal difficulty, to lead a life of spiritual denial."</td>
                 <td>
                     <a href="https://www.adlibris.com/se/bok/demian-9780241307434" target="_blank">
                         <img src="https://s1.adlibris.com/images/29667529/demian.jpg" alt="Hermann Hesse: Demian">
-                    </a>
+                    </a><hr> <strong>Meetup: December 2, 2023</strong>
                 </td>
-                <td>"Demian is a coming-of-age story that follows a young boy's maturation as he grapples with good and evil, lightness and darkness, and forges alternatives to the ever-present corruption and suffering that he sees all around him. Crucial to this development are his relationships with a series of older mentors, of who the titular Demian is the most charismatic, otherworldly and ultimately influential." <hr> | <strong>Meetup: December 2, 2023</strong></td>
+                <td class="to-hide">"Demian is a coming-of-age story that follows a young boy's maturation as he grapples with good and evil, lightness and darkness, and forges alternatives to the ever-present corruption and suffering that he sees all around him. Crucial to this development are his relationships with a series of older mentors, of who the titular Demian is the most charismatic, otherworldly and ultimately influential."</td>
             </tr>
         </table>
+<!--Only visible on smaller screens-->        
+        <div id="hide">
+            <ul>
+                <li>
+                    <a href="https://www.adlibris.com/se/bok/the-midnight-library-9781786892737" target="_blank">Matt Haig: The Midnight Library</a><hr>| <strong>January 7, 2023</strong>
+                </li>
+                <li>
+                    <a href="https://www.adlibris.com/se/bok/the-myth-of-normal-9781785042720?gclid=CjwKCAiAv9ucBhBXEiwA6N8nYG1QZT3WN1yMogVKPxE_n1A0w1Ih1TB7oA-7nl5_0DR3DyZc2F1TwhoCGCQQAvD_BwE" target="_blank">Dr. Gábor Máté: The Myth of Normal</a><hr>| <strong>February 4, 2023</strong>
+                </li>
+                <li>
+                    <a href="https://www.adlibris.com/se/bok/ishmael-an-adventure-of-the-mind-and-spirit-9780613080934" target="_blank">Daniel Quinn: Ishmael</a><hr>| <strong>March 4, 2023</strong>
+                </li>
+                <li>
+                    <a href="https://www.adlibris.com/se/bok/the-story-of-b-9780553379013" target="_blank">Daniel Quinn: The Story of B</a><hr>| <strong>April 1, 2023</strong>
+                </li>
+                <li>
+                    <a href="https://www.adlibris.com/se/bok/my-ishmael-9780553379655" target="_blank">Daniel Quinn: My Ishmael</a><hr>| <strong>May 6, 2023
+                    </strong>
+                </li>
+                <li>
+                    <a href="https://www.adlibris.com/se/bok/when-nietzsche-wept-9780062009302" target="_blank">Irvin D. Yalom: When Nietzsche Wept</a><hr>| <strong>June 3, 2023</strong>
+                </li>
+                <li>
+                    <a href="https://www.adlibris.com/se/bok/the-schopenhauer-cure-9780060938109" target="_blank">Irvin D. Yalom: The Schopenhauer Cure</a><hr>| <strong>July 1, 2023</strong>
+                </li>
+                <li>
+                    <a href="https://www.adlibris.com/se/bok/the-spinoza-problem-9780465061853" target="_blank">Irvin D. Yalom: The Spinoza Problem</a><hr>| <strong>August 5, 2023</strong>
+                </li>
+                <li>
+                    <a href="https://www.adlibris.com/se/bok/journey-by-moonlight-9781901285505" target="_blank">Antal Szerb: Journey By Moonlight</a><hr>| <strong>September 2, 2023</strong>
+                </li>
+                <li>
+                    <a href="https://www.adlibris.com/se/bok/how-to-stop-time-9781838858476" target="_blank">Matt Haig: How To Stop Time</a><hr>| <strong>October 7, 2023</strong>
+                </li>
+                <li>
+                    <a href="https://www.adlibris.com/se/bok/narcissus-and-goldmund-9780141984612" target="_blank">Hermann Hesse: Narcissus and Goldmund</a><hr>| <strong>November 4, 2023</strong>
+                </li>
+                <li>
+                    <a href="https://www.adlibris.com/se/bok/demian-9780241307434" target="_blank">Hermann Hesse: Demian</a><hr>| <strong>December 2, 2023</strong>
+                </li>
+            </ul>
+        </div>
     </section>
     <section id="time-and-place">
         <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2254.090155131584!2d12.9941293!3d55.600444599999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4653a15435423321%3A0xd5e40999ac88751f!2sMalm%C3%B6%20City%20Library!5e0!3m2!1sen!2sse!4v1670855536632!5m2!1sen!2sse" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
