--- a/index.html
+++ b/index.html
@@ -51,26 +51,25 @@ That the river is everywhere at the same time, at the source and at the mouth, a
                     <td>
                         <a href="https://www.adlibris.com/se/bok/the-midnight-library-9781786892737" target="_blank">
                         <img src="https://s1.adlibris.com/images/59118830/the-midnight-library.jpg" alt="Matt Haig: The Midnight Library">
-                        </a>
+                        </a><hr> <h3>Meetup: January 7, 2023</h3>
                     </td>
-                    <td>"Nora's life has been going from bad to worse. Then at the stroke of midnight on her last day on earth she finds herself transported to a library. There she is given the chance to undo her regrets and try out each of the other lives she might have lived. Which raises the ultimate question: with infinite choices, what is the best way to live?" | <strong>Meetup: January 7, 2023</strong></td>
+                    <td class="to-hide">"Nora's life has been going from bad to worse. Then at the stroke of midnight on her last day on earth she finds herself transported to a library. There she is given the chance to undo her regrets and try out each of the other lives she might have lived. Which raises the ultimate question: with infinite choices, what is the best way to live?"</td>
                 </tr>
                 <tr>
                     <td>
                         <a href="https://www.adlibris.com/se/bok/the-myth-of-normal-9781785042720?gclid=CjwKCAiAv9ucBhBXEiwA6N8nYG1QZT3WN1yMogVKPxE_n1A0w1Ih1TB7oA-7nl5_0DR3DyZc2F1TwhoCGCQQAvD_BwE" target="_blank">
                             <img src="https://s2.adlibris.com/images/63089045/the-myth-of-normal.jpg" alt="Gábor Máté: The Myth of Normal">
-                        </a> 
+                        </a><hr> <h3>Meetup: February 4, 2023</h3>
                     </td>
-                    <td>"It all starts with waking up... to what our bodies are expressing and our minds are suppressing." | <strong>Meetup: 
-                        February 4, 2023</strong></td>
+                    <td class="to-hide">"It all starts with waking up... to what our bodies are expressing and our minds are suppressing."</td>
                 </tr>
                 <tr>
                     <td>
                         <a href="https://www.adlibris.com/se/bok/ishmael-an-adventure-of-the-mind-and-spirit-9780613080934" target="_blank">
                             <img src="https://s1.adlibris.com/images/6963755/ishmael-an-adventure-of-the-mind-and-spirit.jpg" alt="Daniel Quinn: Ishmael">
-                        </a>
+                        </a><hr> <h3>Meetup: March 4, 2023</h3>
                     </td>
-                    <td>"Does the earth belong to man?" Ishmael asks. "Or does man belong to the earth?" | <strong>Meetup: March 4, 2023</strong>   
+                    <td class="to-hide">"Does the earth belong to man?" Ishmael asks. "Or does man belong to the earth?"</td>   
                 </tr>
             </table>
             <div id="calendar-button">
