Add aria labels to links

--- a/calendar.html
+++ b/calendar.html
@@ -55,13 +55,13 @@
         <table id="calendar-table">
             <tr>
                 <td>
-                    <a href="https://www.adlibris.com/se/bok/the-midnight-library-9781786892737" target="_blank">
+                    <a href="https://www.adlibris.com/se/bok/the-midnight-library-9781786892737" aria-label="Go to Matt Haig: Midnight Library on the Aldibris website (opens in new tab)" target="_blank">
                     <img src="https://s1.adlibris.com/images/59118830/the-midnight-library.jpg" alt="Matt Haig: The Midnight Library">
                     </a><hr> <strong>Meetup: January 7, 2023</strong>
                 </td>
                 <td class="to-hide">"Nora's life has been going from bad to worse. Then at the stroke of midnight on her last day on earth she finds herself transported to a library. There she is given the chance to undo her regrets and try out each of the other lives she might have lived. Which raises the ultimate question: with infinite choices, what is the best way to live?"</td>
                 <td>
-                    <a href="https://www.adlibris.com/se/bok/the-myth-of-normal-9781785042720?gclid=CjwKCAiAv9ucBhBXEiwA6N8nYG1QZT3WN1yMogVKPxE_n1A0w1Ih1TB7oA-7nl5_0DR3DyZc2F1TwhoCGCQQAvD_BwE" target="_blank">
+                    <a href="https://www.adlibris.com/se/bok/the-myth-of-normal-9781785042720?gclid=CjwKCAiAv9ucBhBXEiwA6N8nYG1QZT3WN1yMogVKPxE_n1A0w1Ih1TB7oA-7nl5_0DR3DyZc2F1TwhoCGCQQAvD_BwE" aria-label="Go to Dr. Gábor Máté: The Myth of Normal on the Aldibris website (opens in new tab)" target="_blank">
                         <img src="https://s2.adlibris.com/images/63089045/the-myth-of-normal.jpg" alt="Gábor Máté: The Myth of Normal">
                     </a><hr> <strong>Meetup: February 4, 2023</strong>
                 </td>
@@ -69,13 +69,13 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://www.adlibris.com/se/bok/ishmael-an-adventure-of-the-mind-and-spirit-9780613080934" target="_blank">
+                    <a href="https://www.adlibris.com/se/bok/ishmael-an-adventure-of-the-mind-and-spirit-9780613080934" aria-label="Go to Daniel Quinn: Ishmael on the Aldibris website (opens in new tab)" target="_blank">
                         <img src="https://s1.adlibris.com/images/6963755/ishmael-an-adventure-of-the-mind-and-spirit.jpg" alt="Daniel Quinn: Ishmael">
                     </a><hr> <strong>Meetup: March 4, 2023</strong>
                 </td>
                 <td class="to-hide">"Does the earth belong to man?" Ishmael asks. "Or does man belong to the earth?"</td>        
                 <td>
-                    <a href="https://www.adlibris.com/se/bok/the-story-of-b-9780553379013" target="_blank">
+                    <a href="https://www.adlibris.com/se/bok/the-story-of-b-9780553379013" aria-label="Go to Daniel Quinn: The Story of B on the Aldibris website (opens in new tab)" target="_blank">
                         <img src="https://s2.adlibris.com/images/6630092/the-story-of-b.jpg" alt="Daniel Quinn: Story of B (2nd book of the Ishmael trilogy)">
                     </a><hr> <strong>Meetup: April 1, 2023</strong>
                 </td>
@@ -84,13 +84,13 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://www.adlibris.com/se/bok/my-ishmael-9780553379655" target="_blank">
+                    <a href="https://www.adlibris.com/se/bok/my-ishmael-9780553379655" aria-label="Go to Daniel Quinn: My Ishmael on the Aldibris website (opens in new tab)" target="_blank">
                         <img src="https://s2.adlibris.com/images/366002/my-ishmael.jpg" alt="Daniel Quinn: My Ishmael (The 3rd book of the Ishmael trilogy)">
                     </a><hr> <strong>Meetup: May 6, 2023</strong>
                 </td>
                 <td class="to-hide">"When Ishmael places an advertisement for pupils with "an earnest desire to save the world," he does not expect a child to answer him. But twelve-year-old Julie Gerchak is undaunted by Ishmael's reluctance to teach someone so young, and convinces him to take her on as his next student."</td>
                 <td>
-                    <a href="https://www.adlibris.com/se/bok/when-nietzsche-wept-9780062009302" target="_blank">
+                    <a href="https://www.adlibris.com/se/bok/when-nietzsche-wept-9780062009302" aria-label="Go to Irvin D. Yalom: When Nietzsche Wept on the Aldibris website (opens in new tab)" target="_blank">
                         <img src="https://s1.adlibris.com/images/2271200/when-nietzsche-wept.jpg" alt="Irvin D. Yalom: When Nietzsche Wept">
                     </a><hr> <strong>Meetup: June 3, 2023</strong>
                 </td>
@@ -98,13 +98,13 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://www.adlibris.com/se/bok/the-schopenhauer-cure-9780060938109" target="_blank">
+                    <a href="https://www.adlibris.com/se/bok/the-schopenhauer-cure-9780060938109" aria-label="Go to Irvin D. Yalom: The Schopenhauer Cure on the Aldibris website (opens in new tab)" target="_blank">
                         <img src="https://s1.adlibris.com/images/2476682/the-schopenhauer-cure.jpg" alt="Irvin D. Yalom: The Schopenhauer Cure">
                     </a><hr> <strong>Meetup: July 1, 2023</strong>
                 </td>
                 <td class="to-hide">"Reevaluating his life after a brush with death, psychiatrist Julius Hertzfeld reconnects with former patient Philip and urges him to join Hertzfeld's therapy group, unaware that a woman Philip victimized is also a member."</td>
                 <td>
-                    <a href="https://www.adlibris.com/se/bok/the-spinoza-problem-9780465061853" target="_blank">
+                    <a href="https://www.adlibris.com/se/bok/the-spinoza-problem-9780465061853" aria-label="Go to Irvin D. Yalom: The Spinoza Problem on the Aldibris website (opens in new tab)" target="_blank">
                         <img src="https://s2.adlibris.com/images/2988587/the-spinoza-problem.jpg" alt="Irvin D. Yalom: The Spinoza Problem">
                     </a><hr> <strong>Meetup: August 5, 2023</strong>
                 </td>
@@ -112,13 +112,13 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://www.adlibris.com/se/bok/journey-by-moonlight-9781901285505" target="_blank">
+                    <a href="https://www.adlibris.com/se/bok/journey-by-moonlight-9781901285505" aria-label="Go to Antal Szerb: Journey by Moonlight on the Aldibris website (opens in new tab)" target="_blank">
                         <img src="https://s2.adlibris.com/images/5824213/journey-by-moonlight.jpg" alt="Antal Szerb: Journey by Moonlight">
                     </a><hr> <strong>Meetup: September 2, 2023</strong>
                 </td>
                 <td class="to-hide">" 'The trouble began in Venice ...' Mihály has dreamt of Italy all his life. When he finally travels there, on his honeymoon with Erzsi, he soon abandons his new wife in order to find himself, haunted by old friends from his turbulent teenage days: the beautiful, kind Tamás, the brash and wicked János, and the sexless yet unforgettable Éva."</td>
                 <td>
-                    <a href="https://www.adlibris.com/se/bok/how-to-stop-time-9781838858476" target="_blank">
+                    <a href="https://www.adlibris.com/se/bok/how-to-stop-time-9781838858476" aria-label="Go to Matt Haig: How To Stop Time on the Aldibris website (opens in new tab)" target="_blank">
                         <img src="https://s2.adlibris.com/images/62888285/how-to-stop-time.jpg" alt="Matt Haig: How To Stop Time">
                     </a><hr> <strong>Meetup: October 7, 2023</strong>
                 </td>
@@ -128,13 +128,13 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://www.adlibris.com/se/bok/narcissus-and-goldmund-9780141984612" target="_blank">
+                    <a href="https://www.adlibris.com/se/bok/narcissus-and-goldmund-9780141984612" aria-label="Go to Hermann Hesse: Narcissus and Goldmund on the Aldibris website (opens in new tab)" target="_blank">
                         <img src="https://s1.adlibris.com/images/27885768/narcissus-and-goldmund.jpg" alt="Hermann Hesse: Narcissus and Goldmund">
                     </a><hr> <strong>Meetup: November 4, 2023</strong>
                 </td>
                 <td class="to-hide">"One of Hermann Hesse's greatest novels, Narcissus and Goldmund is an extraordinary recreation of the Middle Ages, contrasting the careers of two friends, one of whom shuns life in a monastery and goes on the road, tangled in the extremes of life in a world dominated by sin, plague and war, the other staying in the monastery and struggling, with equal difficulty, to lead a life of spiritual denial."</td>
                 <td>
-                    <a href="https://www.adlibris.com/se/bok/demian-9780241307434" target="_blank">
+                    <a href="https://www.adlibris.com/se/bok/demian-9780241307434" aria-label="Go to Hermann Hesse: Demian on the Aldibris website (opens in new tab)" target="_blank">
                         <img src="https://s1.adlibris.com/images/29667529/demian.jpg" alt="Hermann Hesse: Demian">
                     </a><hr> <strong>Meetup: December 2, 2023</strong>
                 </td>
