--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ That the river is everywhere at the same time, at the source and at the mouth, a
             <table id="home-table">
                 <tr>
                     <td>
-                        <a href="https://www.adlibris.com/se/bok/the-midnight-library-9781786892737" aria-label="Go to Matt Haig: Midnight Library on the Aldibris website (opens in new tab)" target="_blank">
+                        <a href="https://www.adlibris.com/se/bok/the-midnight-library-9781786892737" aria-label="Go to Matt Haig: Midnight Library on the Adlibris website (opens in new tab)" target="_blank">
                         <img src="https://s1.adlibris.com/images/59118830/the-midnight-library.jpg" alt="Matt Haig: The Midnight Library">
                         </a><hr> <h3>Meetup: January 7, 2023</h3>
                     </td>
@@ -57,7 +57,7 @@ That the river is everywhere at the same time, at the source and at the mouth, a
                 </tr>
                 <tr>
                     <td>
-                        <a href="https://www.adlibris.com/se/bok/the-myth-of-normal-9781785042720?gclid=CjwKCAiAv9ucBhBXEiwA6N8nYG1QZT3WN1yMogVKPxE_n1A0w1Ih1TB7oA-7nl5_0DR3DyZc2F1TwhoCGCQQAvD_BwE" aria-label="Go to Dr. Gábor Máté: The Myth of Normal on the Aldibris website (opens in new tab)" target="_blank">
+                        <a href="https://www.adlibris.com/se/bok/the-myth-of-normal-9781785042720?gclid=CjwKCAiAv9ucBhBXEiwA6N8nYG1QZT3WN1yMogVKPxE_n1A0w1Ih1TB7oA-7nl5_0DR3DyZc2F1TwhoCGCQQAvD_BwE" aria-label="Go to Dr. Gábor Máté: The Myth of Normal on the Adlibris website (opens in new tab)" target="_blank">
                             <img src="https://s2.adlibris.com/images/63089045/the-myth-of-normal.jpg" alt="Gábor Máté: The Myth of Normal">
                         </a><hr> <h3>Meetup: February 4, 2023</h3>
                     </td>
@@ -65,7 +65,7 @@ That the river is everywhere at the same time, at the source and at the mouth, a
                 </tr>
                 <tr>
                     <td>
-                        <a href="https://www.adlibris.com/se/bok/ishmael-an-adventure-of-the-mind-and-spirit-9780613080934" aria-label="Go to Daniel Quinn: Ishmael on the Aldibris website (opens in new tab)" target="_blank">
+                        <a href="https://www.adlibris.com/se/bok/ishmael-an-adventure-of-the-mind-and-spirit-9780613080934" aria-label="Go to Daniel Quinn: Ishmael on the Adlibris website (opens in new tab)" target="_blank">
                             <img src="https://s1.adlibris.com/images/6963755/ishmael-an-adventure-of-the-mind-and-spirit.jpg" alt="Daniel Quinn: Ishmael">
                         </a><hr> <h3>Meetup: March 4, 2023</h3>
                     </td>
