Add final touch-ups and ReadMe file content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>    
     <header id="main-outer">
-<!--Logo and navigation menu-->
+    <!--Logo and navigation menu-->
         <div id="main-image">
         <a href="index.html" aria-label="Take me back to the Home page">
             <h1 id="logo">#läsa</h1>
@@ -30,7 +30,7 @@
         </nav>
         </div>  
     </header>
- <!--Quote section-->   
+    <!--Quote section-->   
     <section id="quote">
         <div>
             <h1> <i class="fa-solid fa-quote-right"></i></h1>
@@ -41,10 +41,10 @@ That the river is everywhere at the same time, at the source and at the mouth, a
             <h2>Hermann Hesse | Siddhartha</h2>
         </div>
     </section>
- <!--Book list section-->   
+    <!--Book list section-->   
     <section id="home-table-books">
             <div class="upcoming-reads">
-                <h2>Upcoming:</h2>
+                <h2>Upcoming Book Club Meetings:</h2>
             </div>
             <table id="home-table">
                 <tr>
@@ -76,7 +76,7 @@ That the river is everywhere at the same time, at the source and at the mouth, a
                 <a href="calendar.html" aria-label="Go to our full list of meetups and reads for 2023(opens in the same tab)">All Meetups</a>
             </div>                
     </section>
- <!--Footer section - influenced by the walkthrough project - Social Links-->   
+    <!--Footer section - influenced by the walkthrough project - Social Links-->   
     <footer>
         <ul class="social">
             <li>
@@ -87,7 +87,7 @@ That the river is everywhere at the same time, at the source and at the mouth, a
             </li>
         </ul>
     </footer>  
-<!-- font awesome script -->
+    <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/8e916f83b9.js" crossorigin="anonymous"></script>
 </body>
 </html>
